# matrix-market-transform

./: Cargo.toml  README.md
.github/workflows/: build.yml
benches/: bench.rs
data/: README.md
src/: lib.rs  main.rs  permutation.rs
tests/: test.rs
