[package]
name = "row-col-major"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "row_col_major"
path = "src/main.rs"

[lib]
name = "row_col_major"
path = "src/lib.rs"

[[bench]]
name = "bench"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
panic = "abort"
codegen-units = 1

[profile.release.package."*"]
opt-level = 3

[features]
# Use 32-bit values instead of the default 64-bit.
x32 = []

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
permutation = "0.4.1"

[dev-dependencies]
criterion = "0.7.0"
