[package]
name = "matrix-market-transform"
version = "0.1.0"
edition = "2024"

[lib]
name = "matrix_market_transform"
path = "src/lib.rs"

[[bin]]
name = "matrix_market_transform"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "thin"
panic = "abort"
codegen-units = 1

[features]
# Use 32-bit values instead of the default 64-bit.
x32 = []

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
