[package]
name = "matrix-market-transform"
version = "0.1.0"
edition = "2024"

[lib]
name = "matrix_market_transform"
path = "src/lib.rs"

[[bin]]
name = "matrix_market_transform"
path = "src/main.rs"

[profile.release]
lto = "thin"
panic = "abort"
codegen-units = 1

[features]
# Use 64-bit values instead of the default 32-bit-precision values.
x64 = []

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
memmap2 = "0.9.8"
rayon = "1.11.0"
